gitlab-ce/gitlab-deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitlab-ce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab-ce
    spec:
      containers:
      - name: gitlab-ce
        image: gitlab/gitlab-ce:8.11.2-ce.0
        ports:
        - name: gitlab-http
          containerPort: 80
        - name: gitlab-https
          containerPort: 443
        - name: gitlab-ssh
          containerPort: 22
        volumeMounts:
        - mountPath: "/var/opt/gitlab"
          name: gitlab1-mount
        # - mountPath: "/var/log/gitlab"
        #   name: gitlab2-mount
        # - mountPath: "/etc/gitlab"
        #   name: gitlab3-mount
      volumes:
        - name: gitlab1-mount
          persistentVolumeClaim:
            claimName: gitlab1-claim
        # - name: gitlab2-mount
        #   persistentVolumeClaim:
        #     claimName: gitlab2-claim
