gitlab-ce/gitlab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ce
spec:
  type: NodePort
  ports:
  - name: gitlab-http
    port: 80
    protocol: TCP
    # targetPort: 80
  - name: gitlab-https
    port: 443
    protocol: TCP
  - name: gitlab-ssh
    port: 22
    protocol: TCP
  selector:
    app: gitlab-ce
