gitlab-ce/gitlab-registry-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-registry-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - registry.boul.nl
    secretName: gitlab-registry-tls
  rules:
  - host: registry.boul.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-ce
          servicePort: 80
  # - host: bar.localhost
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: service2
  #         servicePort: 80
  #     - backend:
  #         serviceName: service3
  #         servicePort: 80
